2006-04-05  Brian Warner  <warner@lothar.com>

	* buildbot/process/factory.py (BuildFactory.addStep): new method
	to add steps to a BuildFactory. Use it instead of f.steps.append,
	and you can probably avoid using the s() convenience function.
	Patch from Neal Norwitz, sf.net #1412605.
	(other): update all factories to use addStep
	* buildbot/process/process_twisted.py: update all factories to use
	addStep.

2006-04-03  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py: modified find-the-VC-command logic to
	work under windows too. Adapted from a patch by Niklaus Giger,
	addresses SF#1463399.

	* buildbot/test/__init__.py: set $LANG to 'C', to insure that
	spawned commands emit parseable results in english and not some
	other language. Patch from Niklaus Giger, SF#1463394.

	* README (INSTALLATION): discourage users from running unit tests on
	a "network drive", patch from Niklaus Giger.

2006-03-22  Brian Warner  <warner@lothar.com>

	* contrib/svn_buildbot.py: rearrange, add an easy-to-change
	function to turn a repository-relative pathname into a (branch,
	branch-relative-filename) tuple. Change this function to handle
	the branch naming policy used by your Subversion repository.
	Thanks to AllMyData.com for sponsoring this work.

2006-03-16  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: add python-mode declaration for
	vim. Thanks to John Pye for the patch.

	* docs/buildbot.texinfo (Launching the daemons): fix @reboot job
	command line, mention the importance of running 'crontab' as the
	buildmaster/buildslave user. Thanks to John Pye for the catch.

2006-03-13  Brian Warner  <warner@lothar.com>

	* buildbot/status/words.py (IRC): add an optional password=
	argument, which will be sent to Nickserv in an IDENTIFY message at
	login, to claim the nickname. freenode requires this before the
	bot can sent (or reply to) private messages. Thanks to Clement
	Stenac for the patch.
	* docs/buildbot.texinfo (IRC Bot): document it
